2006-09-25  Yong Zheng  <zhengyo@cn.ibm.com>

	* TestRegMemModify.java: New file to add PPC64 specific 
	case and merge Test<ISA>Modify into one case.
	* TestI386Modify.java: Delete.
	* TestX8664Modify.java: Delete. 

2006-09-25  Alexandre Oliva  <aoliva@redhat.com>

	* Isa.java (getRegisterNameByUnwindRegnum): New.
	* IsaEMT64.java (getRegisterNameByUnwindRegnum): Implement.
	* IsaIA32.java (getRegisterNameByUnwindRegnum): Implement.
	* IsaPPC.java (getRegisterNameByUnwindRegnum): Add stub.
	* IsaPPC64.java (getRegisterNameByUnwindRegnum): Add stub.

2006-09-21  Mark Wielaard  <mark@klomp.org>

	* BreakpointAddresses.java (addBreakpoint): Take address as argument.
	(removeBreakpoint): Likewise.
	* PendingCodeObserver.java (address): New field.
	* Proc.java (requestAddCodeObserver): Take address as argument.
	(requestDeleteCodeObserver): Likewise.
	* Task.java (handleAddCodeObserver): Likewise.
	(handleDeleteCodeObserver): Likewise.
	(requestAddCodeObserver): Likewise.
	(requestDeleteCodeObserver): Likewise.
	* TaskCodeObservation (address): New field.
	(TaskCodeObservation): Take address as argument.
	(handleAdd): Pass on address.
	(handleDelete): Likewise.
	* TaskObserver.java (Code.getAddress): Removed method.
	(updateHit): Take address as argument.
	* TaskState (*.handleAddCodeObserver): Handle address as argument.
	(*.handleDeleteCodeObserver): Likewise.
	* TestBreakpoints.java: Update test to pass address as argument.

2006-09-21  Mark Wielaard  <mark@klomp.org>

	* LinuxX8664Syscall.java (syscallList): Updated with audit results.
	* TestSyscallsWithAudit.java (testLinuxEMT64): Enable test.

2006-09-20  Nurdin Premji <npremji@redhat.com>

	* ProcTasksObserver.java (deletedFrom): Add a call to the ProcObserver.ProcTasks deletedFrom function.

2006-09-20  Yao Qi  <qiyaoltc@cn.ibm.com>

	* LinuxPowerPCSyscall.java: Change the system call name per
	libaudit result.
	* TestSyscallsWithAudit.java: Enable test for PPC and PPC64.
