@@ -1,3 +1,8 @@
+2006-09-26  Mark Wielaard  <mark@klomp.org>
+
+	* TestSyscallSignal.java: Replace usage of sys.SyscallNum with
+	proc.Syscall.
+
 2006-09-25  Yong Zheng  <zhengyo@cn.ibm.com>
 
 	* TestRegMemModify.java: New file to add PPC64 specific 
